chore(docs): update wording and formatting

--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in klassendiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in klassendiagrammen.tex
@@ -88,5 +88,5 @@ Für einen konkreten Anwendungsfall wird dann eine Klasse als konkreter Paramete
 
 \blockquote[{\cite[82, Hervorhebungen i.O.]{Fow03b}}]{
 Using a derivation [Anm.: die Verwendung einer parametrisierbaren Klasse wie in Abbildung~\ref{fig:template} gezeigt] is \textit{not}
-the same as subtyping, however. >ou ar enot allowed to add features to the bound element, which is completely specified by its template; you are adding only restricting type information. If you want to create features, you must create a subtype.
+the same as subtyping, however. You are not allowed to add features to the bound element, which is completely specified by its template; you are adding only restricting type information. If you want to create features, you must create a subtype.
 }
