--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
@@ -1,8 +1,9 @@
 \section{Einsatzbereich von Paketdiagrammen}
 
 \textbf{Paketdiagramme} zeigen Pakete und ihre Abhängigkeiten und werden in frühen Designphasen genutzt, um Strukturen (großer Systeme) aufzuzeigen.\\
-Durch die Gruppierung können Details weggelassen werden.
+Durch die Gruppierung können Details weggelassen werden.\\
 
+\noindent
 Eine Abhängigkeit zwischen zwei Paketen gibt die Abhängigkeit darin enthaltener Elemente wieder.\\
 
 \noindent
@@ -24,9 +25,12 @@ Folgende Symbolik kann verwendet werden, um Pakete in Diagrammen zu zeigen:
 
 \noindent
 Es können immer nur \textbf{public} Elemente in anderen Paketen gesehen werden.
-\textit{Buhl} weist darauf hin, dass dies erlaubt, ``Pakete mit Fassaden auszustatten. Das bedeutet, esgibt nur eine public Klasse (Facade) und alle anderen Klassen sind privat.`` (\cite[46]{Buh09}).\\
+\textit{Buhl} weist darauf hin, dass dies erlaubt, ``Pakete mit Fassaden auszustatten. Das bedeutet, es gibt nur eine public Klasse (Facade) und alle anderen Klassen sind privat.`` (\cite[46]{Buh09}).\\
+
+\begin{tcolorbox}
+    Elemente sollten so in Paketen gruppiert werden, dass ihr \textbf{funktionaler Zusammenhalt} (\textit{Kohäsion}, s. Abschnitt~\ref{subsec:hohe-kohasion}) klar wird.
+\end{tcolorbox}
 
 \noindent
-Elemente sollten so in Paketen gruppiert werden, dass ihr \textbf{funktionaler Zusammenhalt} (\textit{Kohäsion}, s. Abschnitt~\ref{subsec:hohe-kohasion}) klar wird.\\
 Hierdurch kann vermieden werden, dass Änderungen einer Klasse eines Paketes auch Änderungen außerhalb des Paketes erfordern.\\
 Außerdem erhöht sich die Wahrscheinlichkeit, dass einzelne Pakete als solche in anderen Projekten wiederverwendet werden können.
