--- a/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
@@ -1,6 +1,6 @@
 \section{Einsatzbereich}
 
-Das \textbf{Aktivitätstdiagramm} gehört zu den \textbf{Verhaltensdiagrammen} und stellt dar, wie \textit{Verhalten} realisiert wird.\\
+Das \textbf{Aktivitätsdiagramm} gehört zu den \textbf{Verhaltensdiagrammen} und stellt dar, wie \textit{Verhalten} realisiert wird.\\
 
 \noindent
 Aktivitätsdiagramme können in \textit{allen} Phasen des Softwareentwicklungsprozesses eingesetzt werden:
