--- a/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
@@ -4,7 +4,7 @@ Mit \textbf{Zustandsautomaten} kann das \textit{Verhalten} von Systemen modellie
 
 \noindent
 Oft werden \textbf{Zustandsautomaten} im \textbf{Design} als Ergänzung zu den \textbf{Klassendiagrammen} eingesetzt, da ein Zustandsautomat den \textit{Lebensweg} eines Objektes modellieren kann: So wird der \textbf{Zustand} eines Objektes durch die Werte seiner \textit{Attribute} bestimmt, und in Zustandsdiagrammen können sinnvolle Kombinationen der Attributwerte modelliert werden.\\
-Ein Objekt kann auf gleiche Anfragen in unterschiedlichen Zuständen unterschiedliche reagieren.\\
+Ein Objekt kann auf gleiche Anfragen in unterschiedlichen Zuständen unterschiedlich reagieren.\\
 
 \subsection*{Eigenschaften}
 
