--- a/docs/repetitorium/part three/Aktivitätsdiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Aktivitätsdiagramme/begriffe und elemente.tex
@@ -29,9 +29,10 @@ Als eine \textit{Einheit} ausführbarer Funktionalität wird eine Aktion\footnot
 } in einem Modell nicht weiter zerlegt.\\
 Für Aktionen können \textbf{Vor-}/\textbf{Nachbedingungen} formuliert werden (s. Abschnitt~\ref{sec:klassendiagramme-begriffe-und-elemente}).
 
-\subsection{Aktivitätsbereich}
-\textbf{Aktivitätsbereiche} sind Verantwortungsbereiche, in denen Aktionen ausgeführt werden.
-Hierbei entscheidet die \textbf{Phase} des Softwareentwicklungsprozesses über die Darstellung der Bereiche, die durch \textit{Geschäftsbereiche} oder \textit{Klassen} repräsentiert werden können.
+\subsection{Aktivitätsbereich (Partition)}
+\textbf{Aktivitätsbereiche} (\textit{activity partitions}) oder auch \textbf{Verantwortlichkeitsbereiche} bzw. \textbf{Partitionen} (\cite[76]{Bal05}) sind Verantwortungsbereiche, in denen Aktionen ausgeführt werden.
+Hierbei entscheidet die \textbf{Phase} des Softwareentwicklungsprozesses über die Darstellung der Aktivitätsbereiche, die durch \textit{Geschäftsbereiche} oder \textit{Klassen} repräsentiert werden können.\\
+Man spricht auch von einer \textit{swimlanes}-Darstellung, da die Einteilung des Diagramms in einzelne Boxen an die einzelnen Bahnen eines Schwimmbeckens erinnern (vgl.~\cite[76]{Bal05}).
 
 \subsection{Kontrollknoten}
 Um das in Aktivitätsdiagrammen beschriebene dynamische Verhalten bereits in der \textbf{Analyse-} bzw. \textbf{Entwurfsphase} zu simulieren, bietet UML das \textbf{Token-Konzept} and, dessen Ursprung in den \textit{Petri-Netzen} liegt - ein \textbf{Token} ist hierbei eine \textit{Marke}, die sich nach bestimmten Regeln durch das Aktivitätsdiagramm bewegen kann: Die Knoten bestimmen, wann ein Token angenommen wird und wann es den Knoten wieder verlassen darf, und die Regeln der Kanten kontrollieren, wann ein Token von einem Ausgangsknoten entfernt und einem Zielknoten übergeben wird (vgl.~\cite[323]{Bal05}).\\
@@ -50,30 +51,51 @@ Objektknoten können Token sammeln und puffern, in Aktionen können sich Token k
 Die Keywords \textcolor{blue}{\guillemotleft centralBuffer\guillemotright} bzw. \textcolor{blue}{\guillemotleft dataStore\guillemotright} erlauben eine nähere Spezifikation der Objektknoten\footnote{s.a.~\cite[398 f.]{OMG17}}:
 
 \begin{itemize}
-    \item \textcolor{blue}{\guillemotleft centralBuffer\guillemotright}: enthält einen Vorrat an Objekten und kann zwischen mehr als zwei Aktionen gestellt werden
+    \item \textcolor{blue}{\guillemotleft centralBuffer\guillemotright}: enthält einen Vorrat an Objekten und kann zwischen mehr als zwei Aktionen gestellt werden\footnote{
+    bspw. als ``unsortierter`` Objektknoten, dann findet die Aktivität ``sortieren`` statt, was in einen ``sortierten`` Objektknoten resultiert (vgl.\cite[Abb. 6.6, 62]{Buh09}phpo)
+    }
     \item \textcolor{blue}{\guillemotleft dataStore\guillemotright}: persistiert Objekte und liefert \textit{Kopien} der Objekte, die Objekte bleiben also erhalten
 \end{itemize}
+
+
+\subsection{Parameterknoten}
+\textbf{Parameterknoten} (\textit{ActivityParameterNode}) sind eine Sonderform von \textbf{Objektknoten}: Sie werden auf den Grenzen einer Aktivität eingetragen und repräsentieren \textit{Eingabeparameter} (ausgehender Pfeil) bzw. \textit{Ausgabeparameter} (eingeheder Pfeil) einer Aktivität (s. Abbildung~\ref{fig:activityparameternode}).
+
+
+
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.35]{part three/Aktivitätsdiagramme/img/activityparameternode}
+    \caption{Aktivität \texibf{ActivityA} mit Ein- und Ausgabeparameter (\textit{arg} bzw. \textit{ret}). (Quelle: in Anlehnung an \cite[Abb.2.9-2, 70]{Bal05})}
+    \label{fig:activityparameternode}
+\end{figure}
+
 
 \subsection{Input-/Output-Pins}
 Ein \textbf{Input-} bzw. \textbf{Output-Pin} stellt eine alternative Darstellung zu Objektknoten dar.\\
 Pins stellen einer Aktion Eingabewerte zur Verfügung und nehmen entsprechend von einer Aktion Ausgabewerte entgegen (vgl.~\cite[73 f.]{Bal05}).
 
-\subsection{Gabelung}
-Über eine \textbf{Gabelung} lassen sich Kontrollflüsse in mehrere \textbf{parallele} Kontrollflüsse aufteilen.
+\subsection{Gabelung / Vereinigung (Splitting / Synchronisation)}
+Über eine \textbf{Gabelung} (\textbf{Splitting}, \textit{fork node}) lassen sich Kontrollflüsse in mehrere \textbf{parallele} Kontrollflüsse aufteilen.\\
 
-\subsection{Vereinigung}
-Eine \texbf{Vereinigung}, die wie eine Gabelung in umgekehrter Richtung gelesen werden kann, fasst \textit{mehrere} Kontrollflüsse zu \textit{einem} zusammen.\\
-Vereinigungen können über eine \textbf{Synchronisationsspezifikation} näher spezifiziert werden.
+\noindent
+Eine \texbf{Vereinigung} (\textbf{Synchronisation}, \textit{join node}), die wie eine Gabelung in umgekehrter Richtung gelesen werden kann, fasst \textit{mehrere} Kontrollflüsse zu \textit{einem} zusammen.\\
+Vereinigungen können über eine \textbf{Synchronisationsspezifikation} näher spezifiziert werden.\\
 
-\subsection{Verzweigung und Verbindung}
-Bei einer \textbf{Verzweigung} wird nur genau eine der möglichen Kontrollflüsse ausgewählt, eine \textbf{Verbindung} fasst mehrere alternative  Kontrollflüsse zusammen, von denen gerade nur \textit{einer} ausgeführt wird (vgl. \cite[60]{Buh09}).
+\noindent
+Im Gegensatz zur \textbf{Verzweigung} und \texbf{Verbindung} kann bei \textbf{Splitting} und anschließender \textbf{Synchronisation} eine nachfolgende Aktion erst ausgeführt werden, wenn alle parallelen Pfade durchlaufen wurden (vgl.~\cite[71]{Bal05}).
+
+\subsection{Verzweigung / Verbindung (Entscheidung / Zusammenführung)}
+Bei einer \textbf{Verzweigung} (\textbf{Entscheidung}, \textit{decision node}) wird nur genau eine der möglichen Kontrollflüsse ausgewählt, eine \textbf{Verbindung} (\textbf{Zusammenführung}, \textit{merge node}) fasst mehrere alternative  Kontrollflüsse zusammen, von denen gerade nur \textit{einer} ausgeführt wird (vgl. \cite[60]{Buh09}).
 
 \subsection{Auszeichnung von Objektknoten}
 Objektknoten und Objektflüsse können ausgezeichnet werden, bspw. durch gewichtete Kanten, die eine Anzahl von Token vorschreiben kann, oder durch Notizen an Objektknoten, über die bspw. eine Entnahmereihenfolge (bspw. \textit{LIFO}/\textit{FIFO}) vorgeschrieben wird.
 
 \subsection{Signalsender / -empfänger}
 Aktionen können \textbf{Signale} senden und empfangen.\\
-Hierbei verbleibt der Kontrollfluss so lange in der Aktion, bis die Aktion ein Signal gesendet (\textit{signal send action}, s.~\cite[76]{Buh09}) bzw. empfangen hat.\\
+Bei dem \textbf{Signalsender} wird der Kontrollfluss fortgesetzt, sobald das Signal gesendet wurde (\textit{signal send action}. \\
+Bei dem \textbf{Signalempfänger} wird der Kontrollfluss erst fortgesetzt, wenn das Signal empfangen wurde (vgl..~\cite[76]{Bal05}).\\
 \textit{Buhl} merkt an, dass Ereignisse auch ``von außen kommen`` können, und deshalb nicht in der aktuellen Aktivität erzeugt werden (vgl.~\cite[63]{Buh09}).
 
 
