docs: update wording and formatting

--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
@@ -1,6 +1,8 @@
 \section{Einsatzbereich}
 
-Die \textbf{Anwendungsfallanalyse} wird im Rahmen der \textbf{Anforderungsspezifikation} eingesetzt.\\
+\begin{tcolorbox}
+    Die \textbf{Anwendungsfallanalyse} wird im Rahmen der \textbf{Anforderungsspezifikation} eingesetzt.
+\end{tcolorbox}
 
 \noindent
 Sie ist das am häufigsten eingesetzte Mittel zur Aufnahme und Darstellung von Anforderungen.\\
@@ -29,3 +31,16 @@ Die \textbf{textliche Beschreibung} eines Anwendungsfalls sollte folgende Inform
     \item ggf. Beschreibung alternativer Abläufe
     \item Priorität des Anwendungsfalls
 \end{itemize}
+
+\begin{tcolorbox}
+    Zu den wichtigsten Schritten einer Anwendungsfallanalyse gehören (vgl.~\cite[Aufgabe 5.2, 88]{Buh09}):
+    \begin{enumerate}
+        \item Akteure identifizieren
+        \item Anwendungsfälle identifizieren
+        \item Beschreiben der Akteure und Anwendungsfälle
+        \item Identifizieren von \textit{Schlüsselobjekten}, die das System verwaltet
+        \item Identifizieren der wichtigsten Anwendungsfälle (Priorisierung
+        \item detailliertere Beschreibung der Anwendungsfälle
+        \item Strukturierung des Anwendungsfalldiagramms
+    \end{enumerate}
+\end{tcolorbox}
