--- a/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Zustandsautomaten/einsatzbereich.tex
@@ -1,9 +1,13 @@
 \section{Einsatzbereich}
 
-Mit \textbf{Zustandsautomaten} kann das \textit{Verhalten} von Systemen modelliert werden, wobei die \textit{Reaktionen} des Systems im Mittelpunkt stehen, und nicht die \textit{Aktionen}, wie bspw. bei den \textbf{Aktivitätsdiagrammen}.\\
+Mit \textbf{Zustandsautomaten} kann das \textit{Verhalten} von Systemen modelliert werden, wobei die \textit{Reaktionen} des Systems im Mittelpunkt stehen, und nicht die \textit{Aktionen}, wie bspw. bei den \textbf{Aktivitätsdiagrammen}.
+
+\begin{tcolorbox}
+    Ein \textbf{Zustandsautomat} kann den \textit{Lebensweg} eines Objektes modellieren, weshalb Zustandsautomaten oft im \textbf{Entwurf} als Ergänzung zu den \textbf{Klassendiagrammen} eingesetzt werden.
+\end{tcolorbox}
 
 \noindent
-Oft werden \textbf{Zustandsautomaten} im \textbf{Design} als Ergänzung zu den \textbf{Klassendiagrammen} eingesetzt, da ein Zustandsautomat den \textit{Lebensweg} eines Objektes modellieren kann: So wird der \textbf{Zustand} eines Objektes durch die Werte seiner \textit{Attribute} bestimmt, und in Zustandsdiagrammen können sinnvolle Kombinationen der Attributwerte modelliert werden.\\
+So wird der \textbf{Zustand} eines Objektes durch die Werte seiner \textit{Attribute} bestimmt, und in Zustandsdiagrammen können sinnvolle Kombinationen der Attributwerte modelliert werden.\\
 Ein Objekt kann auf gleiche Anfragen in unterschiedlichen Zuständen unterschiedlich reagieren.\\
 
 \subsection*{Eigenschaften}
