--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
@@ -28,9 +28,7 @@ Es können immer nur \textbf{public} Elemente in anderen Paketen gesehen werden.
 \textit{Buhl} weist darauf hin, dass dies erlaubt, ``Pakete mit Fassaden auszustatten. Das bedeutet, es gibt nur eine public Klasse (Facade) und alle anderen Klassen sind privat.`` (\cite[46]{Buh09}).\\
 
 \begin{tcolorbox}
-    Elemente sollten so in Paketen gruppiert werden, dass ihr \textbf{funktionaler Zusammenhalt} (\textit{Kohäsion}, s. Abschnitt~\ref{subsec:hohe-kohasion}) klar wird.
+    Elemente sollten so in Paketen gruppiert werden, dass ihr \textbf{funktionaler Zusammenhalt} (\textit{Kohäsion}, s. Abschnitt~\ref{subsec:hohe-kohasion}) klar wird\\.
+    Hierdurch kann vermieden werden, dass Änderungen einer Klasse eines Paketes auch Änderungen außerhalb des Paketes erfordern.\\
+    Außerdem erhöht sich die Wahrscheinlichkeit, dass einzelne Pakete als solche in anderen Projekten wiederverwendet werden können.
 \end{tcolorbox}
-
-\noindent
-Hierdurch kann vermieden werden, dass Änderungen einer Klasse eines Paketes auch Änderungen außerhalb des Paketes erfordern.\\
-Außerdem erhöht sich die Wahrscheinlichkeit, dass einzelne Pakete als solche in anderen Projekten wiederverwendet werden können.
